// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render (with enyzme shallow) 1`] = `
<div>
  <div
    className="covid-country-card"
  >
    <div
      className="header"
    >
      <img
        alt="Australia"
        src="https://disease.sh/assets/img/flags/au.png"
      />
      <h3>
        Australia
      </h3>
    </div>
    <div
      className="body"
    >
      <h4>
        Overall
      </h4>
      <div>
        Cases: 
        <span
          className="overall-cases"
        >
          8,886
        </span>
      </div>
      <div>
        Active: 
        <span
          className="overall-active"
        >
          1,296
        </span>
      </div>
      <div>
        Critical: 
        <span
          className="overall-critical"
        >
          8
        </span>
      </div>
      <div>
        Deaths: 
        <span
          className="overall-deaths"
        >
          106
        </span>
      </div>
      <div>
        Tests: 
        <span
          className="overall-tests"
        >
          2,853,342
        </span>
      </div>
      <h4>
        Today
      </h4>
      <div>
        Cases: 
        <span
          className="today-cases"
        >
          131
        </span>
      </div>
      <div>
        Deaths: 
        <span
          className="today-deaths"
        >
          0
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render (with enzyme render) 1`] = `
<div>
  <div
    class="covid-country-card"
  >
    <div
      class="header"
    >
      <img
        alt="Australia"
        src="https://disease.sh/assets/img/flags/au.png"
      />
      <h3>
        Australia
      </h3>
    </div>
    <div
      class="body"
    >
      <h4>
        Overall
      </h4>
      <div>
        Cases: 
        <span
          class="overall-cases"
        >
          8,886
        </span>
      </div>
      <div>
        Active: 
        <span
          class="overall-active"
        >
          1,296
        </span>
      </div>
      <div>
        Critical: 
        <span
          class="overall-critical"
        >
          8
        </span>
      </div>
      <div>
        Deaths: 
        <span
          class="overall-deaths"
        >
          106
        </span>
      </div>
      <div>
        Tests: 
        <span
          class="overall-tests"
        >
          2,853,342
        </span>
      </div>
      <h4>
        Today
      </h4>
      <div>
        Cases: 
        <span
          class="today-cases"
        >
          131
        </span>
      </div>
      <div>
        Deaths: 
        <span
          class="today-deaths"
        >
          0
        </span>
      </div>
    </div>
  </div>
</div>
`;
